; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_sysv_sem.c_semu_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_sysv_sem.c_semu_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sem_undo = type { i32, i64 }
%struct.thread = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@semu_free_list = common dso_local global i32 0, align 4
@un_next = common dso_local global i32 0, align 4
@semu_list = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sem_undo* (%struct.thread*)* @semu_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sem_undo* @semu_alloc(%struct.thread* %0) #0 {
  %2 = alloca %struct.sem_undo*, align 8
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.sem_undo*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  %5 = load i32, i32* @MA_OWNED, align 4
  %6 = call i32 @SEMUNDO_LOCKASSERT(i32 %5)
  %7 = call %struct.sem_undo* @LIST_FIRST(i32* @semu_free_list)
  store %struct.sem_undo* %7, %struct.sem_undo** %4, align 8
  %8 = icmp eq %struct.sem_undo* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store %struct.sem_undo* null, %struct.sem_undo** %2, align 8
  br label %25

10:                                               ; preds = %1
  %11 = load %struct.sem_undo*, %struct.sem_undo** %4, align 8
  %12 = load i32, i32* @un_next, align 4
  %13 = call i32 @LIST_REMOVE(%struct.sem_undo* %11, i32 %12)
  %14 = load %struct.sem_undo*, %struct.sem_undo** %4, align 8
  %15 = load i32, i32* @un_next, align 4
  %16 = call i32 @LIST_INSERT_HEAD(i32* @semu_list, %struct.sem_undo* %14, i32 %15)
  %17 = load %struct.sem_undo*, %struct.sem_undo** %4, align 8
  %18 = getelementptr inbounds %struct.sem_undo, %struct.sem_undo* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load %struct.thread*, %struct.thread** %3, align 8
  %20 = getelementptr inbounds %struct.thread, %struct.thread* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.sem_undo*, %struct.sem_undo** %4, align 8
  %23 = getelementptr inbounds %struct.sem_undo, %struct.sem_undo* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.sem_undo*, %struct.sem_undo** %4, align 8
  store %struct.sem_undo* %24, %struct.sem_undo** %2, align 8
  br label %25

25:                                               ; preds = %10, %9
  %26 = load %struct.sem_undo*, %struct.sem_undo** %2, align 8
  ret %struct.sem_undo* %26
}

declare dso_local i32 @SEMUNDO_LOCKASSERT(i32) #1

declare dso_local %struct.sem_undo* @LIST_FIRST(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.sem_undo*, i32) #1

declare dso_local i32 @LIST_INSERT_HEAD(i32*, %struct.sem_undo*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
